[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/assets_boss/spritesheets/idle.png" type="Texture" id=1]
[ext_resource path="res://assets/assets_itens/sprites/sombra.png" type="Texture" id=2]
[ext_resource path="res://scripts/master.gd" type="Script" id=3]
[ext_resource path="res://assets/assets_boss/spritesheets/walk.png" type="Texture" id=4]
[ext_resource path="res://assets/assets_boss/spritesheets/running.png" type="Texture" id=5]
[ext_resource path="res://assets/assets_boss/spritesheets/fury.png" type="Texture" id=6]
[ext_resource path="res://assets/assets_boss/spritesheets/hit_walk.png" type="Texture" id=7]
[ext_resource path="res://assets/assets_boss/spritesheets/hit_running.png" type="Texture" id=8]
[ext_resource path="res://assets/assets_boss/spritesheets/die.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 31.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 81.0
height = 48.0

[sub_resource type="CircleShape2D" id=3]
radius = 43.0116

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("master:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_cabeca_master/shape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -42.2222, -105.556 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area_corpo_master/shape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -41.1111, 54.4445 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "die"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_corpo_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -12.2222, 30 ), Vector2( -45.5556, 60 ), Vector2( -57.7778, 84.4445 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("area_cabeca_master/shape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -56.6667, -86.6667 ), Vector2( -153.333, -31.1111 ), Vector2( -182.222, 116.667 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fury"
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_corpo_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.8, 2.1, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -14.4444, 35.5556 ), Vector2( -3.33333, 50 ), Vector2( -4.44445, 38.8889 ), Vector2( -3.33333, 1.11111 ), Vector2( -17.7778, 24.4444 ), Vector2( -23.3333, 61.1111 ), Vector2( -20, 54.4444 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("area_cabeca_master/shape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 1.1, 1.8, 2.2, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -55.5556, -81.1111 ), Vector2( -63.3333, -37.7778 ), Vector2( -62.2222, -78.8889 ), Vector2( -62.2222, -105.556 ), Vector2( -74.4445, -63.3333 ), Vector2( -72.2222, -28.8889 ), Vector2( -70, -68.8889 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6, 2.3, 2.4, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "jump"
}, {
"args": [  ],
"method": "call_tremor"
}, {
"args": [  ],
"method": "spawn_fragmento"
}, {
"args": [  ],
"method": "retornar_comportamento"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sound_fury"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "hit_running"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_corpo_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -40, 35.5556 ), Vector2( -25.5556, 34.4444 ), Vector2( 4.44444, 25.5556 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("area_cabeca_master/shape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -134.444, -67.7778 ), Vector2( -150, -28.8889 ), Vector2( -152.222, -15.5556 ), Vector2( -138.889, -25.5556 ), Vector2( -88.8889, -77.7778 ), Vector2( -34.4445, -98.8889 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_hit"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "hit_walk"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("area_corpo_master/shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.11111, 25.5556 ), Vector2( -2.22222, 38.8889 ), Vector2( 5.55556, 24.4444 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_cabeca_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -42.2222, -88.8889 ), Vector2( -74.4445, -62.2222 ), Vector2( -87.7778, -47.7778 ), Vector2( -55.5556, -81.1111 ), Vector2( -32.2222, -95.5556 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("anim:playback_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_hit"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_cabeca_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -52.222, -80 ), Vector2( -42.2222, -105.556 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "running"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_corpo_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -40, 26.6667 ), Vector2( -41.1111, 54.4445 ), Vector2( -44.4444, 47.7778 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("area_cabeca_master/shape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -132.222, -71.1111 ), Vector2( -138.889, -45.5556 ), Vector2( -132.222, -67.7778 ), Vector2( -140, -42.2222 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "call_tremor"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("master:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("master:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("master:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area_corpo_master/shape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.22222, 32.2222 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("area_cabeca_master/shape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -41.1111, -87.7778 ), Vector2( -31.1111, -86.6667 ), Vector2( -30, -87.7778 ) ]
}

[node name="master" type="KinematicBody2D"]
scale = Vector2( 0.9, 0.9 )
collision_layer = 256
collision_mask = 16
script = ExtResource( 3 )

[node name="sombra" type="Sprite" parent="."]
position = Vector2( -1, 168 )
scale = Vector2( 3, 2 )
texture = ExtResource( 2 )

[node name="master" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 31

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 23, 132 )
shape = SubResource( 1 )

[node name="area_corpo_master" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="area_corpo_master"]
position = Vector2( -41.1111, 54.4445 )
shape = SubResource( 2 )

[node name="area_cabeca_master" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0

[node name="shape" type="CollisionShape2D" parent="area_cabeca_master"]
position = Vector2( -42.2222, -105.556 )
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 3.0
anims/RESET = SubResource( 5 )
anims/die = SubResource( 11 )
anims/fury = SubResource( 8 )
anims/hit_running = SubResource( 10 )
anims/hit_walk = SubResource( 9 )
anims/idle = SubResource( 4 )
anims/running = SubResource( 7 )
anims/walk = SubResource( 6 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="area_corpo_master" to="." method="_on_area_corpo_master_body_entered"]
[connection signal="area_entered" from="area_cabeca_master" to="." method="_on_area_cabeca_master_area_entered"]
[connection signal="screen_entered" from="notifier" to="." method="_on_notifier_screen_entered"]
